--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:crPgNs6L29X++u62Dz1X8eHLzp51VH+1bpsNCrryRgg=
+APP_KEY=base64:AbyFGNXblLz18WS+xHCEv2nylHKcI2bbqc9QRfMj4mc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -71,3 +71,4 @@ MEILISEARCH_NO_ANALYTICS=false
 WWWGROUP=1000
 WWWUSER=1000
 ASSET_URL=https://vigilant-funicular-466p5rr45jjcj55p-8000.app.github.dev
+ASSET_URL=https://redesigned-space-dollop-54q7pwvp9gqhvqq9-8000.app.github.dev
